--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,14 @@
 # Per Jetbrains, we ignore certain IDEA files (https://intellij-support.jetbrains.com/hc/en-us/articles/206544839-How-to-manage-projects-under-Version-Control-Systems):
 
-gae/.idea/workspace.xml
-gae/.idea/tasks.xml
+**/.idea/workspace.xml
+**/.idea/tasks.xml
 
-*.pyc
+**/*.pyc
 
 # We are not going to check in the millions of Amazon reviews
 
-amazon-data/Movies_and_TV_5.json
+data/amazon/Movies_and_TV_5.json
+
+# Emacs turds
+
+**/*.*~
